--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -11,6 +11,7 @@
         placeholder="First Name"
         name="firstName"
         class="form-control"
+        [class.is-invalid]="addForm.controls.firstName.errors && addForm.controls.firstName.touched"
         id="firstName"
       />
       <div *ngIf="submitted && addForm.controls.firstName.errors" class="error">
@@ -19,6 +20,12 @@
           *ngIf="addForm.controls.firstName.errors.required"
         >
           FirstName is required
+        </div>
+        <div
+          class="text-danger"
+          *ngIf="addForm.controls.firstName.errors.pattern"
+        >
+          First Name must be of minimum 3 characters
         </div>
       </div>
     </div>
@@ -29,6 +36,7 @@
         placeholder="Last name"
         name="lastName"
         class="form-control"
+        [class.is-invalid]="addForm.controls.lastName.errors && addForm.controls.lastName.touched"
         id="lastName"
       />
       <div *ngIf="submitted && addForm.controls.lastName.errors" class="error">
@@ -37,6 +45,12 @@
           *ngIf="addForm.controls.lastName.errors.required"
         >
           LastName is required
+        </div>
+        <div
+          class="text-danger"
+          *ngIf="addForm.controls.lastName.errors.pattern"
+        >
+          Last Name must be of minimum 3 characters
         </div>
       </div>
     </div>
@@ -48,6 +62,7 @@
         placeholder="Email"
         name="email"
         class="form-control"
+        pattern=""
         id="email"
       />
       <div *ngIf="submitted && addForm.controls.email.errors" class="error">
