--- a/src/app/list-user/list-user.component.html
+++ b/src/app/list-user/list-user.component.html
@@ -52,7 +52,7 @@
   </table>
 </div>
 
-<div >
+<!-- <div >
   <div class="container p-3">
     <h2>User Details</h2>
     <table id="excel-table" class="table table-striped table-responsive table-hover">
@@ -70,7 +70,7 @@
           <td>{{ user.firstName | uppercase }}</td>
           <td>{{ user.lastName | lowercase }}</td>
           <td>{{ user.email | titlecase }}</td>
-          <!-- <td>
+          <td>
             <button class="btn btn-danger" (click)="deleteUser(user)">
               Delete
             </button>
@@ -81,7 +81,7 @@
             >
               Edit
             </button>
-          </td> -->
+          </td>
         </tr>
         <tr *ngIf="!users || users.length == 0">
           <th colspan="5">
@@ -92,4 +92,4 @@
     </table>
 
   </div>
-</div>
+</div> -->
